# flake8-quotes

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  flake8_quotes.py  pyproject.toml  release.sh  requirements-dev.txt  setup.cfg  setup.py  test.sh  tox.ini  x.py
.github/workflows/: run_quality_assurance.yml  test.yml
debian/: .git-dpm  changelog  control  copyright  debhelper-build-stamp  files
flake8_quotes/: __init__.py  checks.py  docstring_detection.py
test/: test_checks.py  test_docstring_checks.py  test_docstring_detection.py
test/data/: docstring_doubles.py  docstring_doubles_function.py  docstring_doubles_module_multiline.py  docstring_doubles_module_singleline.py  docstring_not_docstrings.py  docstring_singles.py  docstring_singles_module_multiline.py  docstring_singles_module_singleline.py  doubles.py  doubles_escaped.py  doubles_mixed.py  doubles_multiline_string.py  escaped_prefer_doubles.py  multiline_string.py  no_qa.py  singles.py  singles_escaped.py  singles_mixed.py  singles_multiline_string.py  singles_wrapped.py  wrapped.py
